<resources>
    <string name="app_name">Truck India</string>
    <string name="app_header">Truck India</string>
    <string name="action_settings">Settings</string>
    <string name="company_detalis">Company Details</string>
    <string name="your_trip">Your Trip :</string>
    <string name="_id_car_logo">\@+id/car_logo</string>
    <string name="todo">TODO</string>
    <string name="select">Chooseacustomer</string>
    <string name="select1">Choose a customer name</string>
    <string name="next_btn">Next</string>
    <string name="company_name">Company Name :</string>
    <string name="your_name">Your Name :</string>
    <string name="otp">OTP :</string>
    <string name="truck_no">Truck Number :</string>
    <string name="destination_txt">Destination :</string>
    <string name="phone_txt">Choose Driver :</string>
    <string name="customer">Customer Company :</string>
    <string name="customer_name">Customer Name :</string>
    <string name="customerno_txt">Customer Phone Number :</string>
    <string name="add_nxt">ADD</string>
    <string name="add_btn">ADD</string>
    <string name="starttrip_btn">Start Tracking</string>
    <string name="company">Company:</string>
    <string name="phoneno_txt">Phone Number:</string>
    <string name="to_txt">To :</string>
    <string name="truck_txt">Truck Number:</string>
    <string name="addtrip_footer">Add Trips</string>
    <string name="addphone_footer">Add Driver</string>
    <string name="invite_footer">Invite</string>
    <string name="send_btn">Send</string>
    <string name="customerno">Customer Phone Number:</string>
    <string name="phoneno">Phone Number:</string>
    <string name="lastupdate">Update Time :</string>
    <string name="lastlocation">Last Location :</string>
    <string name="connectivity_head_mes">Connectivity Error</string>
    <string name="network_head_mes">Network Error</string>
    <string name="network_fail_mes">We were unable to reach the server,please try again soon.</string>
    <string name="internet_fail_msg">No Internet Connection. Please Check NetConnection</string>
    <string name="btnyes">Yes</string>
    <string name="btnNo">No</string>
    <string name="AppCrashMessage">Sorry,Something went wrong. \nPlease send error mail to admin!!</string>
<string name="Text_Field">Welcome,\nto download the App click below link www.google.com\nThank You</string>
    <!--add driver label-->
    <string name="driver_page_label">Enter Phone Number of Driver you want to track</string>
    <string name="driver_page_label_hint">e.g:9543492022</string>
    <string name="title_activity_web">back to Truck India</string>

    <string name="hello_world">Hello world!</string>



</resources>
