<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addphone_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/headerlayou"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bar_bg_top">
        <include
            android:id="@+id/header"
            layout="@layout/header_layout"/>

    </LinearLayout>



    <TableLayout
            android:id="@+id/registerTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:background="@color/white"
             style="@style/marginlayouts"
            android:orientation="horizontal"
            android:paddingLeft="0.5dp"
            android:paddingRight="0.5dp"
        android:layout_centerVertical="true">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="1dp"
                android:paddingRight="1dp" >

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/fifteen_pt"
                    android:text="@string/driver_page_label"
                    android:paddingLeft="5dp"
                    style="@style/codefont">
                </TextView>
            </TableRow>



     <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:background="@color/gray"
         android:paddingLeft="1.5dp"
         android:paddingRight="1.5dp"
         android:paddingBottom="1.5dp"
         android:paddingTop="1.5dp">
      <EditText
                    android:id="@+id/edityournum"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seventy_pt"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:maxLength="10"
                    android:hint="@string/driver_page_label_hint"
                     android:inputType="phone"
                    android:paddingLeft="5dp" />
            </TableRow>
        <TableRow
            android:id="@+id/addrow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seventy_pt"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp"
            android:background="@color/darkskyblue"
            android:layout_marginTop="@dimen/fourty_pt">
            <Button
                android:id="@+id/addbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/add_btn"
                style="@style/textbutton"
                />
        </TableRow>

    </TableLayout>
    <ProgressBar
        android:id="@+id/addphoneprogresbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
