<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/headerlayou"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bar_bg_top">
        <include
            android:id="@+id/header"
            layout="@layout/header_layout"/>

    </LinearLayout>


    <TableLayout
            android:id="@+id/registerTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


        android:paddingLeft="0.5dp"
            android:paddingRight="0.5dp"
        android:layout_centerVertical="true"
        style="@style/marginlayouts">
        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"

            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp">
            <TextView
                android:id="@+id/PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/fifteen_pt"

                android:text="@string/phoneno"
              android:background="@color/white"
                android:paddingLeft="5dp"
                style="@style/codefont"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/gray"
                android:paddingLeft="1.5dp"
                android:paddingRight="1.5dp"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp">

                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seventy_pt"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="15"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="e.g:9543492022"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="@dimen/ten_pt" />
            </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourty_pt">

            <Button
                android:id="@+id/nextbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/next_btn"
                style="@style/textbutton"
                />
        </TableRow>
        </TableLayout>

    <TextView
           android:id="@+id/txt_loginWelcomeHeader"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
        android:textStyle="bold"
           android:gravity="center"

          android:textSize="@dimen/sixty_px"
        android:paddingTop="@dimen/eighty_pt"
          android:paddingBottom="@dimen/sixty_px"
           android:text="@string/app_header"
           android:textColor="@color/black"
        android:layout_above="@+id/registerTable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ProgressBar
        android:id="@+id/loginprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
