<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/addnewtrip_layout"
    android:background="@color/white">
     <LinearLayout 
        android:id="@+id/headerlayou"
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:background="@drawable/tab_bar_bg_top">
   <include
          android:id="@+id/header"
          layout="@layout/header_layout"/>   
          
       </LinearLayout>
        <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/headerlayou"
    android:id="@+id/addnewscrollview"
            style="@style/marginlayouts">
        
<TableLayout
        android:id="@+id/addnewtripTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:paddingLeft="0.5dp"
        android:paddingRight="0.5dp" >
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_pt"

        android:paddingLeft="1dp"
        android:paddingRight="1dp" >

        <TextView
            android:id="@+id/phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginBottom="@dimen/fifteen_pt"
            android:text="@string/phone_txt"
            android:paddingLeft="5dp"
            style="@style/codefont">
        </TextView>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="1.5dp"
        android:paddingRight="1.5dp"
        android:paddingBottom="1.5dp"
        android:paddingTop="1.5dp" >

       <!-- <EditText
            android:id="@+id/editphoneno"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_pt"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="e.g:+919543492022"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="phone"
            android:paddingLeft="5dp" />
-->

        <Spinner
            android:layout_width="0dp"
            android:layout_height="@dimen/eighty_pt"
            android:id="@+id/phonnospinner"
            android:prompt="@string/select"
            android:layout_weight="1"
            android:background="@color/white"
            android:spinnerMode="dropdown"
            android:textSize="17sp"
            android:textColor="@color/gray"
            android:clickable="true" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_pt"

        android:paddingLeft="1dp"
        android:paddingRight="1dp" >

        <TextView
            android:id="@+id/customerphoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginBottom="@dimen/fifteen_pt"
            android:text="@string/customerno_txt"
            android:paddingLeft="5dp"
            style="@style/codefont">
        </TextView>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="1.5dp"
        android:paddingRight="1.5dp"
        android:paddingBottom="1.5dp"
        android:paddingTop="1.5dp">
        <EditText
            android:id="@+id/editcustomerphoneno"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_pt"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="e.g:9543492022"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"/>

    </TableRow>

    <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          
            android:paddingLeft="1dp"
            android:paddingRight="1dp" >

            <TextView
                android:id="@+id/Truckno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                  android:layout_marginBottom="@dimen/fifteen_pt"
                 android:text="@string/truck_no"
                android:paddingLeft="5dp"
                style="@style/codefont">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp">
            <EditText
                android:id="@+id/edittruckno"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="e.g:23416"
                android:singleLine="true"
                android:nextFocusDown="@+id/source_edittext"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="text"
                android:paddingLeft="5dp"
                />


        </TableRow>
    <!--<TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:layout_marginTop="@dimen/ten_pt">

        <TextView
            android:id="@+id/source_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/fifteen_pt"
            android:text="Source"
            android:paddingLeft="5dp"
            style="@style/codefont">
        </TextView>
    </TableRow>-->
   <!-- <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/gray"
        android:paddingLeft="1.5dp"
        android:paddingRight="1.5dp"
        android:paddingBottom="1.5dp"
        android:paddingTop="1.5dp" >
        <EditText
            android:id="@+id/source_edittext"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_pt"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="e.g:Chennai"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="textCapWords"
            android:paddingLeft="5dp" />
-->
       <!-- <EditText
            android:id="@+id/sourceedittext"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_pt"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="textCapWords"
            android:ems="10"
            android:hint="e.g:Chennai"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/color_cursor"

            android:paddingLeft="5dp" />-->


    <!--</TableRow>-->
 <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="1dp"
            android:paddingRight="1dp" 
             android:layout_marginTop="@dimen/ten_pt">

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/fifteen_pt"
               android:text="@string/destination_txt"
                android:paddingLeft="5dp"
                style="@style/codefont">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

             android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp" >

            <EditText
                android:id="@+id/editdestination"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="e.g:Delhi"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_pt"

            android:paddingLeft="1dp"
            android:paddingRight="1dp" >

           <TextView
                android:id="@+id/customercompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

               android:layout_marginBottom="@dimen/fifteen_pt"
               android:text="@string/customer"
                android:paddingLeft="5dp"
               style="@style/codefont">
            </TextView>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

             android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp">

            <EditText
                android:id="@+id/editcustomercompany"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="e.g:Rama"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />


        </TableRow>
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_pt"

            android:paddingLeft="1dp"
            android:paddingRight="1dp" >

           <TextView
                android:id="@+id/customername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

               android:layout_marginBottom="@dimen/fifteen_pt"
               android:text="@string/customer_name"
                android:paddingLeft="5dp"
               style="@style/codefont">
            </TextView>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp" >

            <EditText
                android:id="@+id/editcustomername"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="e.g:Rahul"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />


        </TableRow>

    <TableRow
        android:id="@+id/addbuttonrow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seventy_pt"
        android:paddingBottom="1.5dp"
        android:paddingTop="1.5dp"
        android:background="@color/darkskyblue"
        android:layout_marginTop="@dimen/fourty_pt">
        <Button
            android:id="@+id/addbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/add_btn"
           style="@style/textbutton"
            />

    </TableRow>


</TableLayout>
    
   </ScrollView>

    <ProgressBar
        android:id="@+id/addprogresbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
