<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/headerlayou"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bar_bg_top">
        <include
            android:id="@+id/header"
            layout="@layout/header_layout"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrolltriplistview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/headerlayou"

        style="@style/marginlayouts">


    </ScrollView>

    <TableLayout
        android:id="@+id/registerTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:paddingLeft="0.5dp"
        android:paddingRight="0.5dp"
        android:layout_centerVertical="true"

        android:layout_alignLeft="@+id/scrolltriplistview"
        android:layout_alignStart="@+id/scrolltriplistview"
        android:layout_alignRight="@+id/scrolltriplistview"
        android:layout_alignEnd="@+id/scrolltriplistview">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/fifteen_pt"

                android:text="@string/company_name"

                android:paddingLeft="5dp"
                style="@style/codefont">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp" >

            <EditText
                android:id="@+id/editcompanynamee"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:singleLine="true"
                android:nextFocusDown="@+id/edityourname"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:hint="e.g:bpatechnologies"
                >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/yurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/fifteen_pt"
                style="@style/codefont"
                android:text="@string/your_name"
                android:paddingLeft="5dp" >
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/gray"
            android:paddingLeft="1.5dp"
            android:paddingRight="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp" >

            <EditText
                android:id="@+id/edityourname"
                android:layout_width="0dp"
                android:layout_height="@dimen/seventy_pt"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:hint="e.g: Kirankumar"/>
        </TableRow>
        <!-- <TableRow
             android:id="@+id/tableRow5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="1dp"
             android:paddingRight="1dp"
              android:paddingTop="2dp">

             <TextView
                 android:id="@+id/OTP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="@dimen/fifteen_pt"
                 style="@style/codefont"
                android:text="@string/otp"
                 android:paddingLeft="5dp" >
             </TextView>
         </TableRow>-->
        <!-- &lt;!&ndash;<TableRow
             android:id="@+id/tableRow6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
              android:background="@color/gray"
             android:paddingLeft="1.5dp"
             android:paddingRight="1.5dp"
             android:paddingBottom="1.5dp"
             android:paddingTop="1.5dp" >

             <EditText
                 android:id="@+id/editotp"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/seventy_pt"
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:ems="10"
                 android:textCursorDrawable="@color/black"
                 android:inputType="number"
                 android:paddingLeft="5dp" />&ndash;&gt;
         </TableRow>-->
        <TableRow
            android:id="@+id/buttonrow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seventy_pt"
            android:paddingBottom="1.5dp"
            android:paddingTop="1.5dp"
            android:background="@color/darkskyblue"
            android:layout_marginTop="@dimen/fourty_pt">
            <Button
                android:id="@+id/detbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/next_btn"
                style="@style/textbutton"
                />

        </TableRow>
    </TableLayout>
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
